[package]
name = "kalatori"
authors = ["Alzymologist Oy <contact@zymologia.fi>"]
version = "0.2.0-rc4"
edition = "2021"
description = "A gateway daemon for Kalatori."
license = "GPL-3.0-or-later"
repository = "https://github.com/Alzymologist/Kalatori-backend"
readme = true
keywords = ["substrate", "blockchain", "finance", "service", "middleware"]
categories = ["finance"]

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "tokio",
    "http1",
    "query",
    "json",
    "matched-path",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "ansi",
    "env-filter",
    "time",
] }
ureq = { version = "2", default-features = false, features = ["json"] }
names = { version = "0.14", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
scale-info = "2"
axum-macros = "0.4"
primitive-types = { version = "0.12", features = ["codec"] }
jsonrpsee = { version = "0.23", features = ["ws-client"] }
thiserror = "1"
frame-metadata = "16"
hex = "0.4"
parity-scale-codec = "3"
serde_json = "1"
sp-crypto-hashing = "0.1"
toml_edit = { version = "0.22", features = ["serde"]}
sled = "0.34"
zeroize = "1.7"
clap = { version = "4", features = ["derive", "cargo", "string", "env"] }
shadow-rs = { version = "0.28", default-features = false }
futures = "0.3"
ahash = "0.8"

substrate_parser = { git = "https://github.com/Alzymologist/substrate-parser" }
substrate-constructor = { git = "https://github.com/Alzymologist/substrate-constructor" }
mnemonic-external = { git = "https://github.com/Alzymologist/mnemonic-external" }
substrate-crypto-light = { git = "https://github.com/Alzymologist/substrate-crypto-light" }

[build-dependencies]
shadow-rs = { version = "0.28", default-features = false, features = ["git2"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1"
indoc = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
rust_2018_idioms = "warn"
unused = "warn"
# TODO: https://github.com/rust-lang/cargo/issues/12918
rust-2024-compatibility = { level = "warn", priority = -1 }

[lints.clippy]
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
cargo_common_metadata = "warn"
arithmetic_side_effects = "warn"
# TODO: https://github.com/rust-lang/cargo/issues/12918
pedantic = { level = "warn", priority = -1 }
