[package]
name = "kalatori"
authors = ["Alzymologist Oy <contact@zymologia.fi>"]
version = "0.2.4"
edition = "2021"
description = "A gateway daemon for Kalatori."
license = "GPL-3.0-or-later"
repository = "https://github.com/Alzymologist/Kalatori-backend"
readme = true
keywords = ["substrate", "blockchain", "finance", "service", "middleware"]
categories = ["finance"]
rust-version = "1.82"

[dependencies]
axum = { version = "0.7", default-features = false, features = [
    "tokio",
    "http1",
    "query",
    "json",
    "matched-path",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
ureq = { version = "2", default-features = false, features = ["json"] }
names = { version = "0.14", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"
scale-info = "2"
axum-macros = "0.4"
primitive-types = { version = "0.12", features = ["codec"] }
jsonrpsee = { version = "0.24", features = ["ws-client"] }
thiserror = "1"
frame-metadata = "16"
const-hex = "1"
codec = { package = "parity-scale-codec", version = "3", features = [
    "chain-error",
    "derive",
] }
serde_json = { version = "1", features = ["raw_value"] }
hashing = { package = "sp-crypto-hashing", version = "0.1" }
toml_edit = { version = "0.22", default-features = false, features = [
    "serde",
    "parse",
    "perf",
] }
sled = "0.34"
zeroize = "1"
clap = { version = "4", features = [
    "derive",
    "cargo",
    "env",
    "string",
    "wrap_help",
    "deprecated",
] }
shadow-rs = { version = "0.35", default-features = false }
ahash = "0.8"
indoc = "2"
async-lock = "3"

substrate_parser = { git = "https://github.com/Alzymologist/substrate-parser" }
substrate-constructor = { git = "https://github.com/Alzymologist/substrate-constructor" }
mnemonic-external = { git = "https://github.com/Alzymologist/mnemonic-external" }
substrate-crypto-light = { git = "https://github.com/Alzymologist/substrate-crypto-light" }

[build-dependencies]
shadow-rs = { version = "0.35", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
rust_2018_idioms = "warn"
unused = "warn"
# TODO: https://github.com/rust-lang/cargo/issues/12918
rust-2024-compatibility = { level = "warn", priority = -1 }

[lints.clippy]
allow_attributes = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
cargo_common_metadata = "warn"
arithmetic_side_effects = "warn"
mod_module_files = "warn"
# TODO: https://github.com/rust-lang/cargo/issues/12918
pedantic = { level = "warn", priority = -1 }
